--- a/langs/tr-TR.json
+++ b/langs/tr-TR.json
@@ -71,9 +71,9 @@
   "BYPASS/HACK_MAIN_LEVELS": "Ana Seviyeler",
   "BYPASS/HACK_MAIN_LEVELS/TIP": "Ana demon seviyelerin kilidini açar",
   "BYPASS/HACK_MUSIC_UNLOCKER": "Müzik Özelleştirici",
-  "BYPASS/HACK_MUSIC_UNLOCKER/TIP": "Özel antrenman ve menü müziğinin kullanmanıza izin verir",
+  "BYPASS/HACK_MUSIC_UNLOCKER/TIP": "Antreman modu ve ana menü için özel müzik kullanılabilmesine izin verir",
   "BYPASS/HACK_SLIDER_LIMIT": "Kaydırma Sınırı",
-  "BYPASS/HACK_SLIDER_LIMIT/TIP": "Kaydırıcıların görünür sınırın ötesine sürüklenmesini izin verir",
+  "BYPASS/HACK_SLIDER_LIMIT/TIP": "Kaydırıcıların görünür sınırının ötesine sürüklenebilmesine izin verir",
   "BYPASS/HACK_TEXT_LENGTH": "Yazı Uzunluğu",
   "BYPASS/HACK_TEXT_LENGTH/TIP": "Metin girişlerinde sınırsız yazı uzunluğuna izin verir",
   "BYPASS/HACK_TREASURE_ROOM": "Hazine Odası",
@@ -101,19 +101,19 @@
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL": "",
   "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON": "Duraklatma Düğmesini Gizle",
-  "COSMETIC/HACK_HIDE_PAUSE_BUTTON/TIP": "Oyun içi imleç etkinleştirildiğinde duraklatma butonunu gizler",
+  "COSMETIC/HACK_HIDE_PAUSE_BUTTON/TIP": "Oyun içi imleç etkinleştirildiğinde kenardaki oluşan duraklatma butonunu gizler",
   "COSMETIC/HACK_HIDE_PAUSE_MENU": "Duraklatma Menüsünü Gizle",
   "COSMETIC/HACK_HIDE_PAUSE_MENU/TIP": "Duraklatma menüsünü gizler, seviyelerin ekran görüntülerini almak için faydalıdır",
   "COSMETIC/HACK_HIDE_PLAYER": "Oyuncuyu Gizle",
   "COSMETIC/HACK_HIDE_PLAYER/TIP": "Oyuncuyu gizler",
   "COSMETIC/HACK_NO_CAMERA": "Kamera Hareketlerini Durdur",
   "COSMETIC/HACK_NO_CAMERA/TIP": "Kamera hareket triggerlarını devre dışı bırakır",
-  "COSMETIC/HACK_NO_CAMERA_ZOOM": "Kamera Zoomunu Durdur",
+  "COSMETIC/HACK_NO_CAMERA_ZOOM": "Kamera Zoom Durdur",
   "COSMETIC/HACK_NO_CAMERA_ZOOM/TIP": "Kamera yakınlaştırma triggerlarını devre dışı bırakır",
   "COSMETIC/HACK_NO_DEATH_EFFECT": "Ölüm Efektlerini Gizle",
-  "COSMETIC/HACK_NO_DEATH_EFFECT/TIP": "Ölüm üzerinde görsel efektleri kaldırır",
+  "COSMETIC/HACK_NO_DEATH_EFFECT/TIP": "Ölünce oluşan efektleri kaldırır",
   "COSMETIC/HACK_NO_DO_NOT_FLIP": "Do Not Flip Yok",
-  "COSMETIC/HACK_NO_DO_NOT_FLIP/TIP": "Deneme ve seviye tamamlanma yazılarının döndürülmesini durdurur",
+  "COSMETIC/HACK_NO_DO_NOT_FLIP/TIP": "Deneme sayısını ve seviye tamamlanma yazılarının döndürülmesini engeller",
   "COSMETIC/HACK_NO_GLOW": "",
   "COSMETIC/HACK_NO_GLOW/TIP": "",
   "COSMETIC/HACK_NO_MIRROR": "",
@@ -121,7 +121,7 @@
   "COSMETIC/HACK_NO_ORB_RING": "",
   "COSMETIC/HACK_NO_ORB_RING/TIP": "",
   "COSMETIC/NO_PARTICLES/HACK_NO_PARTICLES": "Partikülleri Kaldır",
-  "COSMETIC/NO_PARTICLES/HACK_NO_PARTICLES/TIP": "Partikül sistemini (çoğunlukla) devre dışı bırakır",
+  "COSMETIC/NO_PARTICLES/HACK_NO_PARTICLES/TIP": "Partikül sistemini çoğunlukla devre dışı bırakır",
   "COSMETIC/NO_PARTICLES/DROPDOWN": "",
   "COSMETIC/NO_PARTICLES/DROPDOWN/0": "",
   "COSMETIC/NO_PARTICLES/DROPDOWN/1": "",
@@ -150,33 +150,33 @@
   "COSMETIC/HACK_NO_PORTAL_CIRCLE": "",
   "COSMETIC/HACK_NO_PORTAL_CIRCLE/TIP": "",
   "COSMETIC/HACK_NO_PORTAL_LIGHTNING": "Portal Yıldırımını Gizle",
-  "COSMETIC/HACK_NO_PORTAL_LIGHTNING/TIP": "Boyut değiştiren portallardan portal yıldırımını devre dışı bırakır",
-  "COSMETIC/HACK_NO_PULSE": "Nabzı Durdur",
-  "COSMETIC/HACK_NO_PULSE/TIP": "Bazı nesneler üzerindeki titreşimi devre dışı bırakır",
+  "COSMETIC/HACK_NO_PORTAL_LIGHTNING/TIP": "Boyut değiştiren portallardaki portal yıldırım efektini kaldırır",
+  "COSMETIC/HACK_NO_PULSE": "Nabız Efekt Yok",
+  "COSMETIC/HACK_NO_PULSE/TIP": "Bazı nesneler üzerindeki nabız efektini devre dışı bırakır",
   "COSMETIC/HACK_NO_RESPAWN_FLASH": "Yeniden Doğma Flaşını Gizle",
-  "COSMETIC/HACK_NO_RESPAWN_FLASH/TIP": "Yeniden doğma flaşı ve daire efektini devre dışı bırakır.",
+  "COSMETIC/HACK_NO_RESPAWN_FLASH/TIP": "Yeniden doğarken oluşan flaş ve daire şeklindeki efektleri kaldırır",
   "COSMETIC/HACK_NO_SHADERS": "Gölgelendiricileri Gizle",
-  "COSMETIC/HACK_NO_SHADERS/TIP": "Seviye içi gölgelendiricileri devre dışı bırakır",
-  "COSMETIC/HACK_NO_SHAKE": "Sarsıntıları Durdur",
+  "COSMETIC/HACK_NO_SHADERS/TIP": "Seviye içi gölgelendirme efektlerini devre dışı bırakır",
+  "COSMETIC/HACK_NO_SHAKE": "Sarsıntı Durdur",
   "COSMETIC/HACK_NO_SHAKE/TIP": "Sarsıntı triggerlarını devre dışı bırakır",
   "COSMETIC/HACK_NO_TRAIL": "İzi Gizle",
-  "COSMETIC/HACK_NO_TRAIL/TIP": "İzi her zaman kapalı olarak ayarlar",
+  "COSMETIC/HACK_NO_TRAIL/TIP": "Oyuncunun izini kaldırır",
   "COSMETIC/HACK_NO_WAVE_PULSE": "Wave Nabzını Durdur",
   "COSMETIC/HACK_NO_WAVE_PULSE/TIP": "Wave nabzını devre dışı bırakır",
   "COSMETIC/HACK_NO_WAVE_TRAIL": "Wave İzini Gizle",
-  "COSMETIC/HACK_NO_WAVE_TRAIL/TIP": "Sert wave izini devre dışı bırakır, standart iz kalır",
+  "COSMETIC/HACK_NO_WAVE_TRAIL/TIP": "Wave'in kendi izini kaldırır, fakat oyuncunun arkasındaki olan iz kalır",
   "COSMETIC/HACK_NO_WAVE_TRAIL_BEHIND": "Arkada Wave İzini Gizle",
-  "COSMETIC/HACK_NO_WAVE_TRAIL_BEHIND/TIP": "Wave izinin arkasındaki varsayılan oyuncu izini devre dışı bırakır",
+  "COSMETIC/HACK_NO_WAVE_TRAIL_BEHIND/TIP": "Wave izinin arkasındaki oyuncu izini devre dışı bırakır",
   "COSMETIC/HACK_PLAYER_ON_TOP": "",
   "COSMETIC/HACK_PLAYER_ON_TOP/TIP": "",
   "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS": "",
   "COSMETIC/HACK_SHOW_TOTAL_ATTEMPTS/TIP": "",
-  "COSMETIC/HACK_SOLID_WAVE_TRAIL": "Katı Wave İzi",
-  "COSMETIC/HACK_SOLID_WAVE_TRAIL/TIP": "Wave izinde siyah beyaz izdeki gibi karışım yok",
-  "COSMETIC/HACK_STARTPOS_RESET_CAMERA": "StartPos'da Kamerayı Sıfırla",
+  "COSMETIC/HACK_SOLID_WAVE_TRAIL": "Sade Wave İzi",
+  "COSMETIC/HACK_SOLID_WAVE_TRAIL/TIP": "Wave izinde renk karışımını kaldırır",
+  "COSMETIC/HACK_STARTPOS_RESET_CAMERA": "StartPos Kamera Sıfırlama",
   "COSMETIC/HACK_STARTPOS_RESET_CAMERA/TIP": "Her StartPos'un kamerasını sıfırlanmasını zorlar",
   "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH": "Ölünce Triggerlarını Durdur",
-  "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH/TIP": "Ölüm sırasında hareket ve dönüş triggerlarını durdurur, böylece sizi neyin öldürdüğünü görebilirsiniz",
+  "COSMETIC/HACK_STOP_TRIGGERS_ON_DEATH/TIP": "Ölünce hareket ve dönüş triggerlarını durdurur, böylece sizi neyin öldürdüğünü rahatca görebilirsiniz",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING": "İz Kesme",
   "COSMETIC/TRAIL_CUTTING/HACK_TRAIL_CUTTING/TIP": "İz kesilmesini geri getirir",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE": "",
@@ -187,36 +187,36 @@
   "COSMETIC/WAVE_PULSE_SIZE/DROPDOWN/SIZE": "Wave Nabzı Çarpanı",
   "COSMETIC/WAVE_PULSE_SIZE/DROPDOWN/SIZE/SUF": "x",
   "COSMETIC/WAVE_PULSE_SIZE/HACK_WAVE_PULSE_SIZE": "Wave Nabzı Boyutu",
-  "COSMETIC/WAVE_PULSE_SIZE/HACK_WAVE_PULSE_SIZE/TIP": "Wave nabzı boyutu çarpanını değiştirir",
+  "COSMETIC/WAVE_PULSE_SIZE/HACK_WAVE_PULSE_SIZE/TIP": "Wave nabız boyutu çarpanını değiştirir",
   "CREATOR": "Yaratıcı",
-  "CREATOR/HACK_ACCURATE_SAVE": "Doğru Kaydetme",
+  "CREATOR/HACK_ACCURATE_SAVE": "Doğrudan Kaydetme",
   "CREATOR/HACK_ACCURATE_SAVE/TIP": "Obje konumlarını daha doğru şekilde kayıt edilir",
-  "CREATOR/HACK_COPY_HACK": "Kopyalama Hilesi",
-  "CREATOR/HACK_COPY_HACK/TIP": "Şifre olmadan herhangi bir seviyeyi kopyalamanızı sağlar",
+  "CREATOR/HACK_COPY_HACK": "Kopya Hilesi",
+  "CREATOR/HACK_COPY_HACK/TIP": "Şifresi olmadan herhangi bir seviyenin kopyalanmasına izin verir",
   "CREATOR/HACK_CUSTOM_OBJECT_BYPASS": "Özel Obje Baypas",
-  "CREATOR/HACK_CUSTOM_OBJECT_BYPASS/TIP": "Özel objeler için obje sınırını kaldırır ve 50'den fazla kayıt etmenizi sağlar",
+  "CREATOR/HACK_CUSTOM_OBJECT_BYPASS/TIP": "Özel objeler için obje sınırını kaldırır ve 50'den fazla kaydetmenize izin verir",
   "CREATOR/HACK_DEFAULT_SONG_BYPASS": "Varsayılan Şarkı Baypas",
-  "CREATOR/HACK_DEFAULT_SONG_BYPASS/TIP": "Seviye editöründeki gizli varsayılan şarkıları kullanmanızı sağlar",
+  "CREATOR/HACK_DEFAULT_SONG_BYPASS/TIP": "Seviye editöründeki gizli olan şarkıları kullanmanızı sağlar",
   "CREATOR/HACK_EDITOR_EXTENSION": "Editörü Uzat",
   "CREATOR/HACK_EDITOR_EXTENSION/TIP": "Editör uzunluğunu 128 kat artırır",
   "CREATOR/HACK_FREE_SCROLL": "Serbest Kaydırma",
-  "CREATOR/HACK_FREE_SCROLL/TIP": "Editörde dışarı kaydırmanızı sağlar",
+  "CREATOR/HACK_FREE_SCROLL/TIP": "Editörde dışarı kaydırmanıza izin verir",
   "CREATOR/HACK_HIDE_UI": "Kullanıcı Arayüzünü Gizle",
   "CREATOR/HACK_HIDE_UI/TIP": "Seviye oluştururken düzenleme arayüzünü gizler",
   "CREATOR/HACK_LEVEL_EDIT": "Seviye Düzenleme",
   "CREATOR/HACK_LEVEL_EDIT/TIP": "Duraklatma menüsü aracılığıyla herhangi bir seviyeyi düzenlemenizi sağlar",
   "CREATOR/HACK_NO_C_MARK": "C Markasını Kaldır",
-  "CREATOR/HACK_NO_C_MARK/TIP": "Kopyalanan seviyeleri yüklerken (C) markasını kaldırır",
+  "CREATOR/HACK_NO_C_MARK/TIP": "Kopyalanan seviyelerdeki (C) markasını kaldırır",
   "CREATOR/HACK_PLACE_OVER": "Üstüne Koyma",
-  "CREATOR/HACK_PLACE_OVER/TIP": "Seviye düzenleyicide aynı objeyi kendi üzerine yerleştirmenizi sağlar",
+  "CREATOR/HACK_PLACE_OVER/TIP": "Seviye düzenleyicide aynı objeyi kendi üzerine yerleştirmenize izin verir",
   "CREATOR/HACK_SMOOTH_EDITOR_TRAIL": "Pürüzsüz Editör İzi",
   "CREATOR/HACK_SMOOTH_EDITOR_TRAIL/TIP": "Seviye düzenleyicideki oynatma testi çizgisini 30 FPS yerine her karede güncelleyerek daha akıcı hale getirir",
-  "CREATOR/HACK_TOOLBOX_BUTTON_BYPASS": "Araç Kutusu Düğmesi Baypas",
-  "CREATOR/HACK_TOOLBOX_BUTTON_BYPASS/TIP": "Seviye düzenleyicideki araç kutusunda daha fazla objeye izin verir",
-  "CREATOR/HACK_TRIGGER_VALUE_BYPASS": "Trigger Değeri Baypas",
-  "CREATOR/HACK_TRIGGER_VALUE_BYPASS/TIP": "Trigger kontrol limitlerini aşar",
+  "CREATOR/HACK_TOOLBOX_BUTTON_BYPASS": "Araç Kutusu Düğme Baypas",
+  "CREATOR/HACK_TOOLBOX_BUTTON_BYPASS/TIP": "Seviye düzenleyicideki araç kutusuna daha fazla obje koyulmasına izin verir",
+  "CREATOR/HACK_TRIGGER_VALUE_BYPASS": "Trigger Değer Baypas",
+  "CREATOR/HACK_TRIGGER_VALUE_BYPASS/TIP": "Trigger ayarlama limitlerini aşmanıza izin verir",
   "CREATOR/HACK_VERIFY_HACK": "Doğrulama Hack",
-  "CREATOR/HACK_VERIFY_HACK/TIP": "Doğrulanmamış seviyeleri yüklemenizi sağlar",
+  "CREATOR/HACK_VERIFY_HACK/TIP": "Doğrulanmamasına rağmen seviye yüklemenize izin verir",
   "LEVEL": "Seviye",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT": "Sağırlaşma yüzdesi",
   "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT/PRE": "Sağırlaşma yüzdesi",
@@ -244,7 +244,7 @@
   "LEVEL/AUTO_KILL/DROPDOWN/PLATFORMER/PRE": "",
   "LEVEL/AUTO_KILL/DROPDOWN/PLATFORMER/SUF": "",
   "LEVEL/AUTO_MUSIC_SYNC/HACK_AUTO_MUSIC_SYNC": "Otomatik Müzik Senkronizasyonu",
-  "LEVEL/AUTO_MUSIC_SYNC/HACK_AUTO_MUSIC_SYNC/TIP": "Desenkronizasyondan sonra müziği düzeltir. Yalnızca tek şarkılı ve doğrusal seviyeleri destekler",
+  "LEVEL/AUTO_MUSIC_SYNC/HACK_AUTO_MUSIC_SYNC/TIP": "Desenkronizasyondan sonra müziği senkronize eder. Yalnızca tek şarkılı ve doğrusal seviyeleri destekler",
   "LEVEL/AUTO_PICKUP_COINS/DROPDOWN": "",
   "LEVEL/AUTO_PICKUP_COINS/DROPDOWN/0": "Coin 1",
   "LEVEL/AUTO_PICKUP_COINS/DROPDOWN/1": "Coin 2",
@@ -269,41 +269,41 @@
   "LEVEL/HACK_ALLOW_PAUSE_BUFFERING": "",
   "LEVEL/HACK_ALLOW_PAUSE_BUFFERING/TIP": "",
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD": "Otomatik Şarkı İndirme",
-  "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "Seviye sayfası açıldığında şarkıları otomatik indirir",
+  "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "Seviyenin sayfası açıldığında şarkıları otomatik indirir",
   "LEVEL/HACK_AUTO_START_POS": "",
   "LEVEL/HACK_AUTO_START_POS/TIP": "",
   "LEVEL/HACK_CBF": "",
   "LEVEL/HACK_CBF/TIP": "",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Checkpoint Limit Baypas",
-  "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS/TIP": "50 checkpoint sınırını geçinmesine izin verir",
+  "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS/TIP": "50 checkpoint sınırını kaldırır",
   "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE": "Antrenmanda Coin Toplama",
   "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE/TIP": "Antrenman modunda coinlerin ve kullanıcı coinlerin toplanmasına izin verir. WEGFan tarafından yapıldı",
   "LEVEL/HACK_CONFIRM_EXIT": "",
   "LEVEL/HACK_CONFIRM_EXIT/TIP": "",
   "LEVEL/HACK_CONFIRM_FULL_RESET": "Tam Sıfırlamayı Onaylama",
-  "LEVEL/HACK_CONFIRM_FULL_RESET/TIP": "Seviyeyi tamamen sıfırlamadan önce onay gerektirir",
+  "LEVEL/HACK_CONFIRM_FULL_RESET/TIP": "Seviyeyi tamamen sıfırlamadan önce onay ister",
   "LEVEL/HACK_CONFIRM_NORMAL": "Normal'e Geçişi Onaylama",
-  "LEVEL/HACK_CONFIRM_NORMAL/TIP": "Antrenman modundan çıkmadan önce onay gerektirir",
+  "LEVEL/HACK_CONFIRM_NORMAL/TIP": "Antrenman modundan çıkmadan önce onay ister",
   "LEVEL/HACK_CONFIRM_PRACTICE": "Antrenman Onaylama",
-  "LEVEL/HACK_CONFIRM_PRACTICE/TIP": "Antrenman moduna girmeden önce onay gerektirir",
+  "LEVEL/HACK_CONFIRM_PRACTICE/TIP": "Antrenman moduna girmeden önce onay ister",
   "LEVEL/HACK_CONFIRM_RESET": "Sıfırlamayı Onayla",
-  "LEVEL/HACK_CONFIRM_RESET/TIP": "Seviye sıfırlamadan önce onay gerektirir",
+  "LEVEL/HACK_CONFIRM_RESET/TIP": "Seviyeyi sıfırlamadan önce onay ister",
   "LEVEL/HACK_FORCE_PLATFORMER": "Platformer Zorla",
   "LEVEL/HACK_FORCE_PLATFORMER/TIP": "Tüm seviyeleri zorla platform modu yapar",
   "LEVEL/HACK_INSTANT_COMPLETE": "Anında Tamamla",
-  "LEVEL/HACK_INSTANT_COMPLETE/TIP": "Oyuncuyu bir seviyenin sonuna ışınlar",
+  "LEVEL/HACK_INSTANT_COMPLETE/TIP": "Oyuncuyu seviyenin sonuna ışınlar",
   "LEVEL/HACK_JUMP_HACK": "",
   "LEVEL/HACK_JUMP_HACK/TIP": "",
   "LEVEL/HACK_PAUSE_DURING_COMPLETE": "",
   "LEVEL/HACK_PAUSE_DURING_COMPLETE/TIP": "",
-  "LEVEL/HACK_PRACTICE_BUG_FIX": "Antrenman Modu Bugunu Düzelt",
-  "LEVEL/HACK_PRACTICE_BUG_FIX/TIP": "Antrenman modunda oyuncu hızını kaydeder ve geri yükler",
+  "LEVEL/HACK_PRACTICE_BUG_FIX": "Antrenman Modu Bug Düzelt",
+  "LEVEL/HACK_PRACTICE_BUG_FIX/TIP": "Antrenman modunda oyuncu hızını kaydedip, aynı şekilde geri oynatır",
   "LEVEL/HACK_PRACTICE_MUSIC": "Antrenman Müziği",
-  "LEVEL/HACK_PRACTICE_MUSIC/TIP": "Antrenman müziği senkronizasyon ayarlarının kilidini açar",
+  "LEVEL/HACK_PRACTICE_MUSIC/TIP": "Antrenman müziği senkronizasyon ayarının kilidini açar",
   "LEVEL/HACK_REPLAY_LAST_CHECKPOINT": "Son Checkpointden Tekrar Oynat",
-  "LEVEL/HACK_REPLAY_LAST_CHECKPOINT/TIP": "Bir seviyeyi tamamladıktan sonra antrenman modundaki son checkpointten tekrar başlayın",
+  "LEVEL/HACK_REPLAY_LAST_CHECKPOINT/TIP": "Bir seviyeyi tamamladıktan sonra antrenman modundaki son checkpointten tekrar başlattırır",
   "LEVEL/SHOW_HITBOXES_ON_DEATH/HACK_SHOW_HITBOXES_ON_DEATH": "Ölünce Hitboxları Göster",
-  "LEVEL/SHOW_HITBOXES_ON_DEATH/HACK_SHOW_HITBOXES_ON_DEATH/TIP": "Ölünce seviye hitboxlarını görselleştirir",
+  "LEVEL/SHOW_HITBOXES_ON_DEATH/HACK_SHOW_HITBOXES_ON_DEATH/TIP": "Ölünce seviyenin hitboxlarını gösterir",
   "LEVEL/SHOW_HITBOXES_ON_DEATH/DROPDOWN/NOCLIP": "",
   "LEVEL/SHOW_HITBOXES_ON_DEATH/DROPDOWN/DEATH_OBJ": "",
   "LEVEL/HACK_SHOW_LAYOUT": "Düzeni Göster",
@@ -491,15 +491,15 @@
   "DISPLAY/FPS/SPINNER": "FPS",
   "DISPLAY/FPS/SPINNER/SUF": " FPS",
   "DISPLAY/FPS/HACK_FPS": "FPS Kilidini Aç",
-  "DISPLAY/FPS/HACK_FPS/TIP": "FPS hedefini ayarlar. Fizik baypas kullanılmadığı sürece fizik değişmeyecektir",
+  "DISPLAY/FPS/HACK_FPS/TIP": "FPS hedefini ayarlar. Fizik baypas kullanılmadığı sürece oyunun fiziği değişmeyecektir",
   "DISPLAY/HACK_VSYNC": "Dikey Eşitleme",
-  "DISPLAY/HACK_VSYNC/TIP": "FPS'i ekran yenileme hızı ile senkronize ederek ekran yırtılmasını azaltır.",
+  "DISPLAY/HACK_VSYNC/TIP": "FPS'i ekran yenileme hızına senkronize ederek ekran yırtılmasını azaltır.",
   "DISPLAY/PHYSICS_BYPASS/HACK_PHYSICS_BYPASS": "Fizik Baypas",
-  "DISPLAY/PHYSICS_BYPASS/HACK_PHYSICS_BYPASS/TIP": "Varsayılan saniyede 240 fizik sınırını kaldırır ve hedef FPS/TPS'e (hangisi daha yüksekse) göre ayarlar. Bu, 2.1 fiziğini tekrar etmez.",
+  "DISPLAY/PHYSICS_BYPASS/HACK_PHYSICS_BYPASS/TIP": "Normalde olan saniyede 240 fizik güncelleme sınırını kaldırır ve hedef FPS/TPS'e (hangisi daha yüksekse) göre ayarlar. Bu, 2.1 fiziğini geri getirmez.",
   "DISPLAY/PHYSICS_BYPASS/SPINNER": "",
   "DISPLAY/PHYSICS_BYPASS/SPINNER/SUF": "",
   "DISPLAY/DELTA/HACK_LOCK_DELTA": "Delta Kilidi",
-  "DISPLAY/DELTA/HACK_LOCK_DELTA/TIP": "Oynanış sırasında kare süresini (delta) tutarlılık için sabitler, genellikle bot kullanımı için kullanılır.",
+  "DISPLAY/DELTA/HACK_LOCK_DELTA/TIP": "Oynanış sırasında kare süresini (deltayı) tutarlılık için sabitler, genellikle bot kullanımı için kullanılır.",
   "DISPLAY/DELTA/HACK_REAL_TIME": "Gerçek Zaman",
   "DISPLAY/DELTA/HACK_REAL_TIME/TIP": "Delta Kilidi kullanılırken her karede birden fazla geçişe izin verir, böylece yavaşlamaları azaltır.",
   "DISPLAY/HACK_BORDERLESS_CLASSIC": "Klasik Kenarsız",
@@ -515,8 +515,8 @@
   "UTILITY/DIRECTIONAL/P1_RIGHT": "Sağ",
   "UTILITY/DIRECTIONAL/P2_LEFT": "Sol",
   "UTILITY/DIRECTIONAL/P2_RIGHT": "Sağ",
-  "UTILITY/UNCOMPLETE_LEVEL": "Tamamlamayı İptal Et",
-  "UTILITY/UNCOMPLETE_LEVEL/TIP": "Mevcut seviyedeki tamamlamayı iptal eder ve onun istatistiklerini siler",
+  "UTILITY/UNCOMPLETE_LEVEL": "Tamamlamayı Kaldır",
+  "UTILITY/UNCOMPLETE_LEVEL/TIP": "Mevcut seviyedeki tamamlamayı kaldır ve istatistiklerini siler",
   "UTILITY/RESTART_LEVEL": "Seviyeyi Yeniden Başlat",
   "UTILITY/RESTART_LEVEL/TIP": "Mevcut seviyeyi yeniden başlatır",
   "UTILITY/PRACTICE_MODE": "Antrenman Modu",
