--- a/langs/tr-TR.json
+++ b/langs/tr-TR.json
@@ -2,71 +2,71 @@
   "NX/COLOUR/B": "Mavi",
   "NX/COLOUR/DROPDOWN/INPUT": "Hex Rengi",
   "NX/COLOUR/G": "Yeşil",
-  "NX/COLOUR/H": "",
+  "NX/COLOUR/H": "Ton",
   "NX/COLOUR/INPUT": "Hex Rengi",
   "NX/COLOUR/R": "Kırmızı",
-  "NX/COLOUR/S": "",
-  "NX/COLOUR/V": "",
+  "NX/COLOUR/S": "Doy",
+  "NX/COLOUR/V": "Parlak",
   "NX/COLOUR/RESET": "Rengi Sıfırla",
-  "NX/COMBO/EMPTY": "",
-  "NX/PICKER/EMPTY": "",
-  "NX/PICKER/INPUT": "",
-  "ERROR": "",
-  "ERROR/DISMISS": "",
-  "ERROR/HACKPRO/CONFLICTING_RULESET": "",
-  "ERROR/REPLAY/EMPTY_FILENAME": "",
-  "ERROR/REPLAY/FILE_NOT_FOUND": "",
-  "ERROR/REPLAY/NO_INPUTS": "",
+  "NX/COMBO/EMPTY": "Bulunamadı...",
+  "NX/PICKER/EMPTY": "Dosya bulunamadı...",
+  "NX/PICKER/INPUT": "Dosya ismi",
+  "ERROR": "Hata",
+  "ERROR/DISMISS": "Reddet",
+  "ERROR/HACKPRO/CONFLICTING_RULESET": "Etkin kural seti kural kümesi çakışmaları",
+  "ERROR/REPLAY/EMPTY_FILENAME": "Lütfen dosya ismi giriniz...",
+  "ERROR/REPLAY/FILE_NOT_FOUND": "Dosya bulunamadı",
+  "ERROR/REPLAY/NO_INPUTS": "Mevcut makro hiçbir veri içermiyor, devam edilemiyor",
   "ERROR/STATUS/MAX_FIELDS": "",
-  "ERROR/LEVEL/NO_CBF": "",
-  "MESSAGE": "",
-  "MESSAGE/OK": "",
-  "MESSAGE/CANCEL": "",
-  "MESSAGE/YES": "",
-  "MESSAGE/NO": "",
-  "MESSAGE/HOME/CONFIRM_LOGOUT": "",
-  "MESSAGE/HOME/CONFIRM_LOAD_LEGACY": "",
-  "MESSAGE/HOME/LOGOUT_SUCCESS": "",
-  "MESSAGE/DISPLAY/FULLSCREEN_STOPPED": "",
-  "MESSAGE/REPLAY/CONFIRM_CLEAR": "",
-  "MESSAGE/REPLAY/CONFIRM_DELETE": "",
-  "MESSAGE/REPLAY/CONVERT_SUCCESS": "",
-  "MESSAGE/REPLAY/SAVE": "",
-  "MESSAGE/KEYBINDS/EMPTY": "",
-  "GM_VAR/0060": "",
-  "GM_VAR/0061": "",
-  "GM_VAR/0062": "",
-  "GM_VAR/0096": "",
+  "ERROR/LEVEL/NO_CBF": "Lütfen Geode'dan Click Between Frames indirin!",
+  "MESSAGE": "Mesaj",
+  "MESSAGE/OK": "Tamam",
+  "MESSAGE/CANCEL": "İptal",
+  "MESSAGE/YES": "Evet",
+  "MESSAGE/NO": "Hayır",
+  "MESSAGE/HOME/CONFIRM_LOGOUT": "Mega Hack oturumunuzu kapatmak istediğinize emin misiniz?",
+  "MESSAGE/HOME/CONFIRM_LOAD_LEGACY": "Mega Hack v8 ayarlarınızı yüklemek istediğinize emin misiniz? Şuan ki ayarlarınız silinecektir.",
+  "MESSAGE/HOME/LOGOUT_SUCCESS": "Başarıyla oturum kapatıldı! Yeniden başlatlana kadar Mega Hack kullanabilirsiniz.",
+  "MESSAGE/DISPLAY/FULLSCREEN_STOPPED": "Tam Ekran moduna geçmeden önce lütfen seviyeden veya editörden çıkınız.",
+  "MESSAGE/REPLAY/CONFIRM_CLEAR": "Makronuzda kaydedilmemiş değişiklikler var, silip yeniden başlamak istediğinizden emin misiniz?",
+  "MESSAGE/REPLAY/CONFIRM_DELETE": "Seçilen makroyu silmek istediğinizden emin misiniz?",
+  "MESSAGE/REPLAY/CONVERT_SUCCESS": "Makro başarıyla dönüştürüldü! Diğer makrolarınızla birlikte bulabilirsiniz.",
+  "MESSAGE/REPLAY/SAVE": "Makroya yaptığınız değişiklikleri kaydetmek ister misiniz?",
+  "MESSAGE/KEYBINDS/EMPTY": "Öncelikle lütfen bir tuş atayınız",
+  "GM_VAR/0060": "Varsayılan Mini İkon",
+  "GM_VAR/0061": "Spider Dash Değiştir",
+  "GM_VAR/0062": "Dash Ateşini Değiştir",
+  "GM_VAR/0096": "Wave İzini Değiştir",
   "HOME/LANGUAGE": "Dil",
   "HOME/SEARCH": "Ara",
-  "HOME/RULESETS": "",
+  "HOME/RULESETS": "Kural Setleri",
   "HOME/RULESETS/SAFE_MODE": "Güvenli Mod",
-  "HOME/ANIM_SPEED": "",
-  "HOME/ANIM_SPEED/PRE": "",
-  "HOME/ANIM_SPEED/SUF": "",
-  "HOME/CONTRIBUTE_TRANSLATIONS": "",
-  "HOME/DOT": "",
-  "HOME/DOT/TIP": "",
-  "HOME/SHORTCUT/ALT": "",
-  "HOME/SHORTCUT/ICONIC": "",
-  "HOME/SORT_TABS": "",
-  "HOME/SCALE": "",
-  "HOME/SCALE/PRE": "",
-  "HOME/SCALE/SUF": "",
-  "HOME/THEME": "",
-  "HOME/MISC": "",
-  "HOME/MISC/LICENSES": "",
-  "HOME/MISC/LOAD_LANG": "",
-  "HOME/MISC/LOAD_LEGACY_SAVE": "",
-  "HOME/MISC/LOGOUT": "",
-  "KEYBINDS": "",
-  "KEYBINDS/SHORTCUT": "",
-  "KEYBINDS/SET": "",
-  "KEYBINDS/VIEW": "",
-  "KEYBINDS/REMOVE": "",
-  "KEYBINDS/DISABLE_IN_EDITOR": "",
-  "KEYBINDS/DISABLE_IN_EDITOR/TIP": "",
-  "KEYBINDS/EMPTY": "",
+  "HOME/ANIM_SPEED": "Animasyonlar (ms)",
+  "HOME/ANIM_SPEED/PRE": "Animasyonlar",
+  "HOME/ANIM_SPEED/SUF": "ms",
+  "HOME/CONTRIBUTE_TRANSLATIONS": "Çevirilere Katkıda Bulunun",
+  "HOME/DOT": "Gösterge Noktası",
+  "HOME/DOT/TIP": "Oyun içindeki Mega Hack arayüzlerindeki onay kutularına bir gösterge noktası ekler.",
+  "HOME/SHORTCUT/ALT": "Alt Kısayolu",
+  "HOME/SHORTCUT/ICONIC": "İkon Kısayolu",
+  "HOME/SORT_TABS": "Arayüzü Sırala",
+  "HOME/SCALE": "Arayüz Büyüklüğü",
+  "HOME/SCALE/PRE": "Arayüz Büyüklüğü",
+  "HOME/SCALE/SUF": "x",
+  "HOME/THEME": "Tema",
+  "HOME/MISC": "Diğerler",
+  "HOME/MISC/LICENSES": "Lisanslar",
+  "HOME/MISC/LOAD_LANG": "Dil Yükle",
+  "HOME/MISC/LOAD_LEGACY_SAVE": "V8 Kaydı Yükle",
+  "HOME/MISC/LOGOUT": "Oturum Kapat",
+  "KEYBINDS": "Atama",
+  "KEYBINDS/SHORTCUT": "Atama Seç",
+  "KEYBINDS/SET": "Atamak istediğin Hile",
+  "KEYBINDS/VIEW": "Atamalarını Görüntüle",
+  "KEYBINDS/REMOVE": "Atamalarını Kaldır",
+  "KEYBINDS/DISABLE_IN_EDITOR": "Editörde Kapat",
+  "KEYBINDS/DISABLE_IN_EDITOR/TIP": "Mega Hack üzerinden yapılan tuş atamalarını editörde devre dışı bırakır",
+  "KEYBINDS/EMPTY": "N/A",
   "BYPASS": "Baypas",
   "BYPASS/HACK_MAIN_LEVELS": "Ana Seviyeler",
   "BYPASS/HACK_MAIN_LEVELS/TIP": "Ana demon seviyelerin kilidini açar",
@@ -85,21 +85,21 @@
   "BYPASS/HACK_UNLOCK_VAULTS": "Kasaların Kilidini Aç",
   "BYPASS/HACK_UNLOCK_VAULTS/TIP": "Tüm kasaların kilidini açar",
   "COSMETIC": "Kozmetik",
-  "COSMETIC/ACCURATE_PERCENTAGE/HACK_ACCURATE_PERCENTAGE": "",
-  "COSMETIC/ACCURATE_PERCENTAGE/HACK_ACCURATE_PERCENTAGE/TIP": "",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS": "",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/0": "",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/1": "",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/2": "",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/3": "",
-  "COSMETIC/HACK_BALL_ROTATION_BUG": "",
-  "COSMETIC/HACK_BALL_ROTATION_BUG/TIP": "",
-  "COSMETIC/HACK_CLASSIC_PARTICLES": "Klasik Partiküller",
-  "COSMETIC/HACK_CLASSIC_PARTICLES/TIP": "Oyuncuyu takip eden klasik partikülleri restore eder.",
-  "COSMETIC/HACK_CLASSIC_PULSE": "",
-  "COSMETIC/HACK_CLASSIC_PULSE/TIP": "",
-  "COSMETIC/HACK_CLASSIC_WAVE_TRAIL": "",
-  "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/HACK_ACCURATE_PERCENTAGE": "Kesin Yüzdelik",
+  "COSMETIC/ACCURATE_PERCENTAGE/HACK_ACCURATE_PERCENTAGE/TIP": "Oyun içi olan ayarı için ondalık basamak özelleştirilmesine izin verir.",
+  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS": "Kesin Yüzdelik",
+  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/0": "1 Ondalık Basamak",
+  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/1": "2 Ondalık Basamak",
+  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/2": "3 Ondalık Basamak",
+  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/3": "4 Ondalık Basamak",
+  "COSMETIC/HACK_BALL_ROTATION_BUG": "Ball Dönme Bug",
+  "COSMETIC/HACK_BALL_ROTATION_BUG/TIP": "2.0'da olan dönme bugunu geri getirir",
+  "COSMETIC/HACK_CLASSIC_PARTICLES": "Eski Partiküller",
+  "COSMETIC/HACK_CLASSIC_PARTICLES/TIP": "Oyuncuyu takip eden eski partikülleri restore eder.",
+  "COSMETIC/HACK_CLASSIC_PULSE": "Eski Nabız",
+  "COSMETIC/HACK_CLASSIC_PULSE/TIP": "60hz'in üstünde nabız efektine izin verir, 2.1'den önceki gibi",
+  "COSMETIC/HACK_CLASSIC_WAVE_TRAIL": "Eski Wave İzi",
+  "COSMETIC/HACK_CLASSIC_WAVE_TRAIL/TIP": "2.1'deki olan wave izini geri getirir",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON": "Duraklatma Düğmesini Gizle",
   "COSMETIC/HACK_HIDE_PAUSE_BUTTON/TIP": "Oyun içi imleç etkinleştirildiğinde kenardaki oluşan duraklatma butonunu gizler",
   "COSMETIC/HACK_HIDE_PAUSE_MENU": "Duraklatma Menüsünü Gizle",
@@ -114,8 +114,8 @@
   "COSMETIC/HACK_NO_DEATH_EFFECT/TIP": "Ölünce oluşan efektleri kaldırır",
   "COSMETIC/HACK_NO_DO_NOT_FLIP": "Do Not Flip Yok",
   "COSMETIC/HACK_NO_DO_NOT_FLIP/TIP": "Deneme sayısını ve seviye tamamlanma yazılarının döndürülmesini engeller",
-  "COSMETIC/HACK_NO_GLOW": "",
-  "COSMETIC/HACK_NO_GLOW/TIP": "",
+  "COSMETIC/HACK_NO_GLOW": "Parlama Yok",
+  "COSMETIC/HACK_NO_GLOW/TIP": "Bütün objelerdeki parlamayı kaldırır",
   "COSMETIC/HACK_NO_MIRROR": "",
   "COSMETIC/HACK_NO_MIRROR/TIP": "",
   "COSMETIC/HACK_NO_ORB_RING": "",
@@ -202,17 +202,17 @@
   "CREATOR/HACK_FREE_SCROLL": "Serbest Kaydırma",
   "CREATOR/HACK_FREE_SCROLL/TIP": "Editörde dışarı kaydırmanıza izin verir",
   "CREATOR/HACK_HIDE_UI": "Kullanıcı Arayüzünü Gizle",
-  "CREATOR/HACK_HIDE_UI/TIP": "Seviye oluştururken düzenleme arayüzünü gizler",
-  "CREATOR/HACK_LEVEL_EDIT": "Seviye Düzenleme",
-  "CREATOR/HACK_LEVEL_EDIT/TIP": "Duraklatma menüsü aracılığıyla herhangi bir seviyeyi düzenlemenizi sağlar",
+  "CREATOR/HACK_HIDE_UI/TIP": "Seviye oluştururken editör arayüzünü gizler",
+  "CREATOR/HACK_LEVEL_EDIT": "Seviye Editleme",
+  "CREATOR/HACK_LEVEL_EDIT/TIP": "Duraklatma menüsü aracılığıyla herhangi bir seviyeyi editlemenizi sağlar",
   "CREATOR/HACK_NO_C_MARK": "C Markasını Kaldır",
   "CREATOR/HACK_NO_C_MARK/TIP": "Kopyalanan seviyelerdeki (C) markasını kaldırır",
   "CREATOR/HACK_PLACE_OVER": "Üstüne Koyma",
-  "CREATOR/HACK_PLACE_OVER/TIP": "Seviye düzenleyicide aynı objeyi kendi üzerine yerleştirmenize izin verir",
+  "CREATOR/HACK_PLACE_OVER/TIP": "Seviye editöründe aynı objeyi kendi üzerine yerleştirmenize izin verir",
   "CREATOR/HACK_SMOOTH_EDITOR_TRAIL": "Pürüzsüz Editör İzi",
-  "CREATOR/HACK_SMOOTH_EDITOR_TRAIL/TIP": "Seviye düzenleyicideki oynatma testi çizgisini 30 FPS yerine her karede güncelleyerek daha akıcı hale getirir",
+  "CREATOR/HACK_SMOOTH_EDITOR_TRAIL/TIP": "Seviye editöründeki oynatma testi çizgisini 30 FPS yerine her karede güncelleyerek daha akıcı hale getirir",
   "CREATOR/HACK_TOOLBOX_BUTTON_BYPASS": "Araç Kutusu Düğme Baypas",
-  "CREATOR/HACK_TOOLBOX_BUTTON_BYPASS/TIP": "Seviye düzenleyicideki araç kutusuna daha fazla obje koyulmasına izin verir",
+  "CREATOR/HACK_TOOLBOX_BUTTON_BYPASS/TIP": "Seviye editöründeki araç kutusuna daha fazla obje koyulmasına izin verir",
   "CREATOR/HACK_TRIGGER_VALUE_BYPASS": "Trigger Değer Baypas",
   "CREATOR/HACK_TRIGGER_VALUE_BYPASS/TIP": "Trigger ayarlama limitlerini aşmanıza izin verir",
   "CREATOR/HACK_VERIFY_HACK": "Doğrulama Hack",
@@ -415,7 +415,7 @@
   "UNIVERSAL/HACK_LOAD_AUDIO_TO_MEMORY": "",
   "UNIVERSAL/HACK_LOAD_AUDIO_TO_MEMORY/TIP": "",
   "UNIVERSAL/HACK_LOCK_CURSOR": "Fare İmlecini Kilitle",
-  "UNIVERSAL/HACK_LOCK_CURSOR/TIP": "Oynatma yada seviye düzenleme sırasında fare imleci pencereye kilitler",
+  "UNIVERSAL/HACK_LOCK_CURSOR/TIP": "Oynatma yada seviye editleme sırasında fare imleci pencereye kilitler",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY": "Ana Menüde Oynama",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY/TIP": "Ana menüde oyunun kontrolünü ele alınmasına izin verir",
   "UNIVERSAL/HACK_NO_TRANSITION": "Sahne Geçişi Yok",
