--- a/langs/tr-TR.json
+++ b/langs/tr-TR.json
@@ -121,14 +121,14 @@
   "COSMETIC/HACK_NO_ORB_RING": "",
   "COSMETIC/HACK_NO_ORB_RING/TIP": "",
   "COSMETIC/NO_PARTICLES/HACK_NO_PARTICLES": "Partikülleri Kaldır",
-  "COSMETIC/NO_PARTICLES/HACK_NO_PARTICLES/TIP": "Partikül sistemini çoğunlukla devre dışı bırakır",
-  "COSMETIC/NO_PARTICLES/DROPDOWN": "",
+  "COSMETIC/NO_PARTICLES/HACK_NO_PARTICLES/TIP": "Partikül sisteminin bazı özelliklerini devre dışı bırakır",
+  "COSMETIC/NO_PARTICLES/DROPDOWN": "Aktif Partikülleri Seçin",
   "COSMETIC/NO_PARTICLES/DROPDOWN/0": "",
-  "COSMETIC/NO_PARTICLES/DROPDOWN/1": "",
-  "COSMETIC/NO_PARTICLES/DROPDOWN/2": "",
+  "COSMETIC/NO_PARTICLES/DROPDOWN/1": "Baloncuk Efekt",
+  "COSMETIC/NO_PARTICLES/DROPDOWN/2": "Çarpma Efekt",
   "COSMETIC/NO_PARTICLES/DROPDOWN/3": "",
-  "COSMETIC/NO_PARTICLES/DROPDOWN/4": "",
-  "COSMETIC/NO_PARTICLES/DROPDOWN/5": "",
+  "COSMETIC/NO_PARTICLES/DROPDOWN/4": "Sandık Efekt",
+  "COSMETIC/NO_PARTICLES/DROPDOWN/5": "Coin Efekt",
   "COSMETIC/NO_PARTICLES/DROPDOWN/6": "",
   "COSMETIC/NO_PARTICLES/DROPDOWN/7": "",
   "COSMETIC/NO_PARTICLES/DROPDOWN/8": "",
@@ -145,10 +145,10 @@
   "COSMETIC/NO_PARTICLES/DROPDOWN/19": "",
   "COSMETIC/NO_PARTICLES/DROPDOWN/20": "",
   "COSMETIC/NO_PARTICLES/DROPDOWN/21": "",
-  "COSMETIC/HACK_NO_PARTICLES_CLASSIC": "",
-  "COSMETIC/HACK_NO_PARTICLES_CLASSIC/TIP": "",
-  "COSMETIC/HACK_NO_PORTAL_CIRCLE": "",
-  "COSMETIC/HACK_NO_PORTAL_CIRCLE/TIP": "",
+  "COSMETIC/HACK_NO_PARTICLES_CLASSIC": "Partikülleri Kaldır Klasik",
+  "COSMETIC/HACK_NO_PARTICLES_CLASSIC/TIP": "Partikül sistemini çoğunlukla devre dışı bırakır",
+  "COSMETIC/HACK_NO_PORTAL_CIRCLE": "Portal Daire Yok",
+  "COSMETIC/HACK_NO_PORTAL_CIRCLE/TIP": "Portala girerken oluşan iç çemberi devre dışı bırakır",
   "COSMETIC/HACK_NO_PORTAL_LIGHTNING": "Portal Yıldırımını Gizle",
   "COSMETIC/HACK_NO_PORTAL_LIGHTNING/TIP": "Boyut değiştiren portallardaki portal yıldırım efektini kaldırır",
   "COSMETIC/HACK_NO_PULSE": "Nabız Efekt Yok",
